--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-Flask
-pymongo
-gunicorn
-pytest
-requests
-werkzeug
-markdown
-flask-compress
-stripe
-openai
-chromadb
-google-generativeai
-sentence-transformers
-azure-cosmos
-azure-storage-blob
-azure-keyvault-secrets
-azure-identity
-azure-monitor-opentelemetry-exporter
-web: gunicorn app:app
-worker: python revenue_agent.py
+Flask==2.2.3
+pymongo==4.3.3
+gunicorn==20.1.0
+pytest==7.3.1
+requests==2.28.2
+werkzeug==2.2.3
+markdown==3.4.3
+flask-compress==1.13
+google-generativeai==0.3.0
+python-dotenv==1.0.0
+dnspython==2.3.0
