--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,8 @@ flask-compress==1.13
 google-generativeai==0.3.0
 python-dotenv==1.0.0
 dnspython==2.3.0
+redis==4.5.4
+chromadb==0.4.15
+sentence-transformers==2.2.2
+numpy==1.24.3
+scikit-learn==1.3.0
