--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,10 @@
-Flask==2.2.3
-pymongo==4.3.3
-gunicorn==20.1.0
-pytest==7.3.1
-requests==2.28.2
-werkzeug==2.2.3
-markdown==3.4.3
-flask-compress==1.13
-google-generativeai==0.3.0
-python-dotenv==1.0.0
-dnspython==2.3.0
-redis==4.5.4
-chromadb==0.4.15
+Flask==2.3.3
+Werkzeug==2.3.7
+pymongo==4.6.1
+google-generativeai==0.3.2
+redis==5.0.1
+chromadb==0.4.18
 sentence-transformers==2.2.2
-numpy==1.24.3
-scikit-learn==1.3.0
+gunicorn==21.2.0
+flask-compress==1.14
+requests==2.31.0
