--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,5 @@
-Flask==2.3.3
-Werkzeug==2.3.7
-pymongo==4.6.1
-google-generativeai==0.3.2
-redis==5.0.1
-chromadb==0.4.18
-sentence-transformers==2.2.2
-gunicorn==21.2.0
-flask-compress==1.14
-requests==2.31.0
+Flask==2.2.3
+pymongo==4.3.3
+gunicorn==20.1.0
+requests==2.28.2
+werkzeug==2.2.3
