--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 Flask==2.2.3
 pymongo==4.3.3
 gunicorn==20.1.0
+pytest==7.3.1
 requests==2.28.2
 werkzeug==2.2.3
+markdown==3.4.3
+flask-compress==1.13
+google-generativeai==0.3.0
+python-dotenv==1.0.0
+dnspython==2.3.0
+redis==4.5.4
+chromadb==0.4.15
+sentence-transformers==2.2.2
+numpy==1.24.3
+scikit-learn==1.3.0
