Update: Configure azure.yaml to use app_simple and correct start command

--- a/azure.yaml
+++ b/azure.yaml
@@ -1,7 +1,5 @@
 {
   "language": "python",
-  "buildCommands": [
-    "pip install -r requirements.txt"
-  ],
-  "startCommand": "gunicorn app_optimized:app"
+  "buildCommands": ["pip install -r requirements.txt"],
+  "startCommand": "gunicorn app_simple:app",
 }
