--- a/azure.yaml
+++ b/azure.yaml
@@ -1,5 +1,5 @@
 {
   "language": "python",
   "buildCommands": ["pip install -r requirements.txt"],
-  "startCommand": "gunicorn app_simple:app",
+  "startCommand": "python startup.py",
 }
