--- a/.env
+++ b/.env
@@ -22,3 +22,6 @@ ADMIN_API_KEY=your-admin-key-for-analytics
 
 # Third-party Services
 MAILERLITE_API_KEY=your-mailerlite-api-key
+
+#azure app insight connection string
+InstrumentationKey=bc1d26ba-0d5d-4b48-8a95-8890aff793b5;IngestionEndpoint=https://eastus-8.in.applicationinsights.azure.com/;LiveEndpoint=https://eastus.livediagnostics.monitor.azure.com/;ApplicationId=5b75eaaf-63d2-4e57-a3ea-b1522e0b69f3
